# pico-examples

./: CMakeLists.txt
encoder/: CMakeLists.txt  encoder.cpp  encoder.hpp  firmware.cpp  imu.cpp  imu.hpp  serial_read.py
feather_firmware/: CMakeLists.txt  encoder.cpp  encoder.hpp  feather.cpp  feather.hpp  imu.cpp  imu.hpp  main.cpp
i2c/mpu6050_i2c/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
